fix: changes in login and register spacings

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -18,7 +18,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 10px;
+  padding: 20px;
   max-width: 816px;
 }
 
